tests/snapshots/multi_entry_points__lalr.snap
---
source: tests/multi_entry_points.rs
expression: result
---
Ok(
    [
        ProcCall(
            "foo",
            [
                Binary(
                    Add,
                    Number(
                        1,
                    ),
                    Number(
                        2,
                    ),
                ),
                Binary(
                    Mul,
                    Number(
                        45,
                    ),
                    Neg(
                        Number(
                            2,
                        ),
                    ),
                ),
            ],
        ),
        ProcCall(
            "bar",
            [],
        ),
        ProcCall(
            "baz",
            [
                Neg(
                    Neg(
                        Number(
                            2,
                        ),
                    ),
                ),
                Number(
                    1,
                ),
            ],
        ),
    ],
)
